added one short cut for ui-u-1.

--- a/src/css/grids.less
+++ b/src/css/grids.less
@@ -64,10 +64,16 @@ this the same font stack that Normalize.css sets for the `body`.
 
 // shortcuts
 .@{ui-class-prefix}-u,
+.@{ui-class-prefix}-u-1,
 .@{ui-class-prefix}-u-golden-ratio,
 .@{ui-class-prefix}-u-golden-ratio-1
  {
     &:extend(.esf-grid-u all);
+}
+
+
+.@{ui-class-prefix}-u-1 {
+    width: 100%;
 }
 
 .@{ui-class-prefix}-u-golden-ratio {
