menu change. demo code generation.

--- a/demo.less
+++ b/demo.less
@@ -51,8 +51,8 @@ body {
 }
 
 #page-footer {
-    background: @gray;
-    color: @gray-lighter;
+    background: @black-70;
+    color: @black-10;
 }
 #content-container,
 #page-footer {
@@ -71,7 +71,7 @@ body {
         padding: 0.5em 1em;
         display: block; 
         &:hover {
-            background: @gray-lighter;
+            background: @black-10;
             text-decoration: none; 
         }
     }
@@ -113,14 +113,14 @@ body {
 /* grid-border */
 .l-box {
     padding: 1em;
-    border: 1px solid @gray-light;
+    border: 1px solid @black-50;
 }
 
 .grid-demo {
     .ui-g {
-        background: @gray-lighter;
+        background: @black-10;
         [class *= "@{ui-class-prefix}-u"] {
-            background: @gray-light;
+            background: @black-50;
             color: @white;
             text-align:center;
         }
