--- a/src/css/main.css
+++ b/src/css/main.css
@@ -560,11 +560,14 @@ ui-disabled {
   opacity: 0.8;
 }
 .clearfix:before,
-.clearfix:after {
+.clearfix:after,
+.ui-menu.horizontal:before,
+.ui-menu.horizontal:after {
   content: " ";
   display: table;
 }
-.clearfix:after {
+.clearfix:after,
+.ui-menu.horizontal:after {
   clear: both;
 }
 .p1 {
@@ -832,11 +835,11 @@ blockquote footer {
   color: #777;
 }
 a {
-  color: #555555;
+  color: #4d4d4d;
   text-decoration: none;
 }
 a:hover {
-  color: #2f2f2f;
+  color: #262626;
   text-decoration: underline;
 }
 address {
@@ -1446,8 +1449,8 @@ textarea:focus {
 }
 .ui-button {
   color: #ffffff;
-  background-color: #777777;
-  border-color: #777777;
+  background-color: #808080;
+  border-color: #808080;
   padding: 0 16px;
   font-size: 16px;
   border-radius: 5px;
@@ -1457,8 +1460,8 @@ textarea:focus {
 .ui-button:hover,
 .ui-button.hover {
   color: #ffffff;
-  background-color: #5e5e5e;
-  border-color: #585858;
+  background-color: #666666;
+  border-color: #616161;
 }
 .ui-button-primary {
   color: #ffffff;
@@ -1527,13 +1530,13 @@ textarea:focus {
   border-color: #ca410b;
 }
 .ui-button-link {
-  color: #555555;
+  color: #4d4d4d;
   text-decoration: none;
   background: none;
   border: 0;
 }
 .ui-button-link:hover {
-  color: #2f2f2f;
+  color: #262626;
   text-decoration: underline;
 }
 .ui-button-link:hover {
@@ -1668,12 +1671,6 @@ textarea:focus {
   margin-bottom: .35em;
   border-bottom: 1px solid #d9d9d9;
 }
-.ui-dropdown li .ui-dropdown {
-  display: none;
-}
-.ui-dropdown li:hover > .ui-dropdown {
-  display: block;
-}
 .ui-dropdown li.heading {
   padding: 0.5em 1em;
   font-weight: bold;
@@ -1698,64 +1695,48 @@ textarea:focus {
   padding: 0;
   margin: 0;
 }
-.ui-menu > ul > li {
+.ui-menu > ul .ui-menu-item {
   position: relative;
-  margin: 0;
 }
-.ui-menu > ul > li > a {
+.ui-menu > ul .ui-menu-item > a {
   text-decoration: none;
 }
-.ui-menu > ul > li.disabled {
+.ui-menu > ul .ui-menu-item.disabled {
   cursor: not-allowed;
   opacity: 0.8;
 }
-.ui-menu > ul > li.disabled a {
-  text-shadow: #000000 0 -1px 0;
-}
-.ui-menu > ul > li.disabled a:hover {
+.ui-menu > ul .ui-menu-item.disabled a:hover {
   background: none;
 }
-.ui-menu > ul > li.heading {
-  font-weight: bold;
-}
-.ui-menu > ul > li .ui-dropdown {
+.ui-menu.hoverable .ui-menu-item .ui-dropdown {
   display: none;
 }
-.ui-menu > ul > li:hover > .ui-dropdown {
+.ui-menu.hoverable .ui-menu-item:hover > .ui-dropdown {
+  display: block;
+}
+.ui-dropdown.hoverable > li .ui-dropdown,
+.ui-menu.hoverable .ui-dropdown > li .ui-dropdown {
+  display: none;
+}
+.ui-dropdown.hoverable > li:hover > .ui-dropdown,
+.ui-menu.hoverable .ui-dropdown > li:hover > .ui-dropdown {
   display: block;
 }
 .ui-menu {
   background: #d00000;
 }
-.ui-menu > ul > li > a {
+.ui-menu .ui-menu-item {
+  margin: 0;
+}
+.ui-menu .ui-menu-item > a {
   color: #ffffff;
   padding: 0.5em 1em;
-  line-height: 1.7;
 }
-.ui-menu > ul > li:hover {
+.ui-menu .ui-menu-item > a:hover {
   background-color: #9d0000;
 }
-.ui-menu > ul > li.active {
+.ui-menu .ui-menu-item.active {
   background: #9d0000;
-}
-.ui-menu.horizontal {
-  *zoom: 1;
-}
-.ui-menu.horizontal:before,
-.ui-menu.horizontal:after {
-  display: table;
-  content: "";
-}
-.ui-menu.horizontal:after {
-  clear: both;
-}
-.ui-menu.horizontal:before,
-.ui-menu.horizontal:after {
-  content: " ";
-  display: table;
-}
-.ui-menu.horizontal:after {
-  clear: both;
 }
 .ui-menu.horizontal > ul > li {
   float: left;
