--- a/src/css/palette.less
+++ b/src/css/palette.less
@@ -1,9 +1,17 @@
+
 @white:                  #fff;
-@gray-darker:            lighten(#000, 13.5%); // #222
-@gray-dark:              lighten(#000, 20%);   // #333
-@gray:                   lighten(#000, 33.5%); // #555
-@gray-light:             lighten(#000, 46.7%); // #777
-@gray-lighter:           lighten(#000, 93.5%); // #eee
+// gray colors
+@black-10: darken(@white, 10%);
+@black-20: darken(@white, 20%);
+@black-30: darken(@white, 30%);
+@black-40: darken(@white, 40%);
+@black-50: darken(@white, 50%);
+@black-60: darken(@white, 60%);
+@black-70: darken(@white, 70%);
+@black-80: darken(@white, 80%);
+@black-90: darken(@white, 90%);
+
+@black: #000;
 
 
 @primary-color:          #D00000;
