--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -20,7 +20,7 @@
 /* =========
    Type
    ========= */
-@link-color:       @gray;
+@link-color:       @black-70;
 @link-hover-color: darken(@link-color, 15%);
 
 /* =========
@@ -62,8 +62,8 @@
 @default-button-padding: 16px;
 
 @default-button-text-color: @white;
-@default-button-background-color: @gray-light;
-@default-button-border-color: @gray-light;
+@default-button-background-color: @black-50;
+@default-button-border-color: @black-50;
 
 @primary-button-text-color: @white;
 @primary-button-background-color: @primary-color;
@@ -105,7 +105,8 @@
 @menu-text-color: @default-button-text-color;
 @menu-active-background-color: @primary-color;
 @menu-item-padding: 0.5em 1em;
-@menu-item-line-height: 1.7;
+@menu-item-margin: 0;
+
 
 /*
 * 
