--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -103,10 +103,11 @@
    ========= */
 @menu-background-color: @primary-color;
 @menu-text-color: @default-button-text-color;
+@menu-text-size: @base-font-size;
 @menu-active-background-color: @primary-color;
 @menu-item-padding: 0.5em 1em;
 @menu-item-margin: 0;
-
+@menu-item-active-shadow: 0 0.2em 0 inset;
 
 /*
 * 
