--- a/src/css/menus.less
+++ b/src/css/menus.less
@@ -53,7 +53,7 @@
     }
 }
 
-.menu-variant(@menu-background-color; @text-color; @menu-active-background-color; @menu-item-padding; @menu-item-margin) {
+.menu-variant(@menu-background-color; @text-color; @menu-active-background-color; @menu-item-padding; @menu-item-margin; @menu-font-size; @menu-item-active-shadow) {
     background: @menu-background-color;
     .@{ui-class-prefix}-menu-item {
         margin: @menu-item-margin;
@@ -63,10 +63,16 @@
             &:hover {
                 background-color: darken(@menu-background-color, 10%);
             }
+            font-size: @menu-font-size;
         }
         &.active {
             background: darken(@menu-background-color, 10%);
+            box-shadow: @menu-item-active-shadow;
         }
+    }
+    .@{ui-class-prefix}-menu-separator-before,
+    .@{ui-class-prefix}-menu-separator-after {
+        border-color: rgba(0, 0, 0, 0.1);
     }
 }
 
@@ -82,6 +88,7 @@
             position: relative;
             > a {
                 text-decoration: none;
+                display: block;
             }
             &.disabled {
                 a {
@@ -128,32 +135,38 @@
         @menu-text-color,
         @menu-active-background-color,
         @menu-item-padding,
-        @menu-item-margin
+        @menu-item-margin,
+        @menu-text-size,
+        @menu-item-active-shadow
     );
 }
 
 .@{ui-class-prefix}-menu.horizontal {
     &:extend(.clearfix all);
-}
-
-.@{ui-class-prefix}-menu.horizontal {
-    > ul > li {
+    .@{ui-class-prefix}-menu-item {
         float: left;
-        a {
-            display: block;
-        } 
     }
     .@{ui-class-prefix}-dropdown {
         position: absolute;
         min-width: 100%;
     }
+    .@{ui-class-prefix}-menu-separator-before {
+        border-left-width: 1px;
+        border-left-style: solid;
+    }
+    .@{ui-class-prefix}-menu-separator-after {
+        border-right-width: 1px;
+        border-right-style: solid;
+    }
 }
 
-.@{ui-class-prefix}-menu.vertical {
-    li {
-        position: relative;
-        a {
-            display: block;
-        }
+.@{ui-class-prefix}-menu.vertical { 
+    .@{ui-class-prefix}-menu-separator-before {
+        border-top-width: 1px;
+        border-top-style: solid;
+    }
+    .@{ui-class-prefix}-menu-separator-after {
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
     }
 }
