--- a/src/css/main.less
+++ b/src/css/main.less
@@ -17,6 +17,7 @@
 @import "./input.less";
 @import "./divider.less";
 @import "./buttons.less";
+@import "./dropdown.less";
 @import "./menus.less";
 @import "./label.less";
 @import "./checkbox.less";
