--- a/src/css/palette.less
+++ b/src/css/palette.less
@@ -1,18 +1,17 @@
 
 @white:                  #fff;
 // gray colors
-@black-10: darken(@white, 10%);
-@black-20: darken(@white, 20%);
-@black-30: darken(@white, 30%);
-@black-40: darken(@white, 40%);
-@black-50: darken(@white, 50%);
-@black-60: darken(@white, 60%);
-@black-70: darken(@white, 70%);
-@black-80: darken(@white, 80%);
-@black-90: darken(@white, 90%);
+@black-10: darken(@white, 10%); // color: #e6e6e6;
+@black-20: darken(@white, 20%); // color: #cccccc;
+@black-30: darken(@white, 30%); // color: #b3b3b3;
+@black-40: darken(@white, 40%); // color: #999999;
+@black-50: darken(@white, 50%); // color: #808080;
+@black-60: darken(@white, 60%); // color: #666666;
+@black-70: darken(@white, 70%); // color: #4d4d4d;
+@black-80: darken(@white, 80%); // color: #333333;
+@black-90: darken(@white, 90%); // color: #191919;
 
 @black: #000;
-
 
 @primary-color:          #D00000;
 @primary-bg-color:       #FEFDFA;
