--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -35,10 +35,14 @@
    ========= */
 @input-background-color: #FFFFFF;
 @input-border-color: 1px solid rgba(0, 0, 0, 0.15);
-@input-text-color: rgba(0, 0, 0, 0.7);
+@input-text-color: @black-70;
+@input-text-size: @base-font-size;
 @input-placeholder-color: #BBBBBB;
 // tab color, webkit only
 @input-tap-color: rgba(255, 255, 255, 0);
+@input-border-radius: @default-border-radius;
+@input-padding: 0.65em 1em;
+@input-default-height: 40px;
 
 // active state
 @input-active-border-color: rgba(0, 0, 0, 0.3);
@@ -109,6 +113,19 @@
 @menu-item-margin: 0;
 @menu-item-active-shadow: 0 0.2em 0 inset;
 
+//
+// Dropdown
+// 
+@dropdown-border-color: 1px solid rgba(0, 0, 0, 0.1);
+@dropdown-background-color: @primary-bg-color;
+@dropdown-text-color: @text-color;
+@dropdown-text-size: @base-font-size * 0.75;
+@dropdown-hightlight-color: @black-10;
+@dropdown-item-padding: 0.5em 1em;
+@dropdown-separator-space: 0.35em;
+@dropdown-heading-padding: 0.5em 1em;
+@dropdown-heading-text-size: @base-font-size * 0.875;
+
 
 /* =========
    Menu
@@ -145,9 +162,9 @@
 @default-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
 
 // z-index settings (compatible with BootStrap, ESUI)
-@header-z-index: 1000;
-@footer-z-index: 1000;
-@modal-z-index: 1050;
+@header-z-index: @zindex-navbar;
+@footer-z-index: @zindex-navbar;
+@modal-z-index: @zindex-modal;
 
 //-- Z-index master list
 //
